--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login_email">Email</string>
+    <string name="login_password">Password</string>
+    <string name="login_signup">Sign Up</string>
+    <string name="login_login">Log in</string>
 </resources>
