--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hint_siteTitle">Placemark Title</string>
     <string name="hint_siteDescription">Description </string>
     <string name="button_addImage">Add Image </string>
+    <string name="menu_addSite">Add site</string>
 </resources>
