Image picking and saving works, but only with one image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="site_saveSite">Save</string>
     <string name="site_deleteSite">Delete</string>
     <string name="toast_enter_site_title">Please enter a title</string>
+    <string name="image_picker_select_image">Select image</string>
 </resources>
