--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,10 @@
     <string name="login_signup">Sign Up</string>
     <string name="login_login">Log in</string>
     <string name="hint_siteTitle">Placemark Title</string>
-    <string name="hint_siteDescription">Description </string>
-    <string name="button_addImage">Add Image </string>
+    <string name="hint_siteDescription">Description</string>
+    <string name="button_addImage">Add Image</string>
     <string name="menu_addSite">Add site</string>
+    <string name="menu_logout">Log out</string>
     <string name="site_saveSite">Save</string>
     <string name="site_deleteSite">Delete</string>
     <string name="toast_enter_site_title">Please enter a title</string>
