--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,14 @@
     <string name="button_addImage">Add Image</string>
     <string name="menu_addSite">Add site</string>
     <string name="menu_logout">Log out</string>
+    <string name="menu_settings">Settings</string>
     <string name="site_saveSite">Save</string>
     <string name="site_deleteSite">Delete</string>
     <string name="toast_enter_site_title">Please enter a title</string>
     <string name="toast_wrong_date_format">Wrong date format</string>
     <string name="image_picker_select_image">Select image</string>
     <string name="settings_account_name">Logged in as: </string>
-    <string name="settings_total_sites">Total number of sites: </string>
-    <string name="settings_visited_sites">Number of visited sites: </string>
+    <string name="settings_total_sites">Total number of sites:</string>
+    <string name="settings_visited_sites">Number of visited sites:</string>
 
 </resources>
