--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="site_deleteSite">Delete</string>
     <string name="toast_enter_site_title">Please enter a title</string>
     <string name="toast_wrong_date_format">Wrong date format</string>
+    <string name="toast_could_not_load_date">Could not load date, set to default</string>
     <string name="image_picker_select_image">Select image</string>
     <string name="settings_account_name">Logged in as: </string>
     <string name="settings_total_sites">Total number of sites:</string>
