--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,6 +1,10 @@
 Release notes
 
 
+2019.12.29. - v1.1.1
+Hotfix:
+	- Visited checkbox was clickable in site list, fixed now
+
 2019.12.29. - v1.1.0
 Features:
 	- Components:
