--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_addSite">Add site</string>
     <string name="menu_logout">Log out</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_mapOfAllSites">Map of all sites</string>
     <string name="site_saveSite">Save</string>
     <string name="site_deleteSite">Delete</string>
     <string name="toast_enter_site_title">Please enter a title</string>
