Sharing a site in email works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="site_saveSite">Save</string>
     <string name="site_deleteSite">Delete</string>
     <string name="site_markAsFavourite">Mark as favourite</string>
+    <string name="site_shareEmail">Share site in Email</string>
     <string name="toast_enter_site_title">Please enter a title</string>
     <string name="toast_wrong_date_format">Wrong date format</string>
     <string name="toast_could_not_load_date">Could not load date, set to default</string>
