--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,9 +1,29 @@
 Release notes
 
 
+2019.01.04. - v2.0.0
+Features:
+	- Components:
+		- Map of all sites
+		- Favourites
+	- Site features:
+		- Rate site
+		- Current location detection
+		- Mark as favourite
+		- Share site
+	- Navigation:
+		- Navigation Drawer
+		- Landscape support
+	- Persistance:
+		- Firebase database
+Improvements:
+	- UI improvements
+
+
 2019.12.29. - v1.1.1
 Hotfix:
 	- Visited checkbox was clickable in site list, fixed now
+	
 
 2019.12.29. - v1.1.0
 Features:
