--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="settings_account_name">Logged in as: </string>
     <string name="settings_total_sites">Total number of sites:</string>
     <string name="settings_visited_sites">Number of visited sites:</string>
+    <string name="hint_search_title">Search based on title</string>
 
 </resources>
