--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="hint_search_title">Search based on title</string>
     <string name="navigator_your_location">Your location</string>
     <string name="navigator_site_default_title">Site</string>
+    <string name="navigator_site_location">Site location</string>
 </resources>
