--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Archeological Fieldwork</string>
+    <string name="app_created_by">App created by:</string>
     <string name="my_name">Jójárt Bence</string>
     <string name="my_email">jojart.bence96@gmail.com</string>
 
