--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Archeological Fieldwork</string>
     <string name="app_created_by">App created by:</string>
-    <string name="my_name">Jójárt Bence</string>
+    <string name="my_name">Bence Jójárt</string>
     <string name="my_email">jojart.bence96@gmail.com</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
